plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ru.antonio'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'


	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
//	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.2'
	// https://mvnrepository.com/artifact/org.mockito/mockito-core
	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.8.0'

	// https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit
	implementation group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.70.0'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.2.2'
// https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-prometheus
	implementation group: 'io.micrometer', name: 'micrometer-registry-prometheus', version: '1.12.3'

//// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
//	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.4.0'
//	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webflux-ui
//	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webflux-ui', version: '2.3.0'
//	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
//	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'

// https://mvnrepository.com/artifact/guru.nidi/graphviz-java
	implementation group: 'guru.nidi', name: 'graphviz-java', version: '0.18.1'

}


tasks.named('test') {
	useJUnitPlatform()
}
